# servant-aeson-versioned

./: LICENSE  servant-aeson-versioned.cabal  stack.yaml
src/Servant/API/ContentTypes/: AesonVersioned.hs
test/Servant/API/ContentTypes/: AesonVersionedSpec.hs
