name:                servant-aeson-versioned
version:             0.1.0.0
synopsis:            Servant content types for versioned aeson instances
description:         Please see README.md
homepage:            https://github.com/vfiles/servant-aeson-versioned
license:             BSD3
license-file:        LICENSE
author:              VFILES
maintainer:          engineering@vfiles.com
copyright:           2016 VFILES
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Servant.API.ContentTypes.AesonVersioned
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , aeson
                     , aeson-versioned
                     , http-media
                     , bytestring
                     , containers
                     , case-insensitive
                     , errors
  default-language:    Haskell2010

test-suite servant-aeson-versioned-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-aeson-versioned
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vfiles/servant-aeson-versioned
